--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -2,15 +2,15 @@ name: Build and Test Docker Image
 
 on:
   push:
-    branches:
-      -main
-    pull_request:
+    
+    
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
       - name: docker build
-        run:
-          docker build -t meme-generator .
+        run: docker build -t meme-generator .
